[add] body、エントリーパーツ、サイドーバーなどのデザインを上書き

--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -19,7 +19,7 @@ $brand-brawn:          #611012 !default;
 $brand-orange:         #e6b400 !default;
 $brand-yellow:         #feda34 !default;
 
-$brand-blue:           #3ca1db !default;
+$brand-blue:           #323f79 !default;
 $brand-green:          #17b6a5 !default;
 $brand-orange:         #eea452 !default;
 $brand-purple:         #5558a3 !default;
@@ -87,7 +87,7 @@ $border-radius:      6;
 
 $screen-lg:         1460;
 $screen:            1020;
-$screen-tab:        768;
+$screen-tab:        680;
 $screen-sp:         375;
 
 $screen-md-max:     ($screen - 1);         // Medium screen Max
